add README to staticfiles dir so it will commit to the repo. Ignore all other files within it.

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,13 @@ bin/*
 include/*
 lib/*
 local/*
+venv/*
 
 # IPython files
 share/*
 camel.db.bak
+
+# Don't commit files in the collectstatic folder, except the README
+!staticfiles/README.md
+staticfiles/*
 
